src/local-k8s-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-injection-wrapper-deployment
  labels:
    app: flask-wrapper-injection-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-wrapper-injection-container
  template:
    metadata:
      labels:
        app: flask-wrapper-injection-container
    spec:
      containers:
      - name: flask-wrapper-injection-container
        # Change to the docker image that you wish to deploy
        image: ijonglin/flask-wrapper-injection
        ports:
          - containerPort: 8888
---
kind: Service
apiVersion: v1
metadata:
  name: flask-injection-service-doorstep
spec:
  selector:
    app: flask-wrapper-injection-container
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
#  selector:
#    name: auth-ingress
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 80
#      # Needs to be exposed in expose-ports.kind.yaml
      nodePort: 30000
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: flask-injection-service
spec:
  selector:
    app: flask-wrapper-injection-container
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /(/|$)(.*)
        backend:
          service:
            name: flask-injection-service
            port:
              number: 8888
