src/local-k8s-ingress/ingress-with-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: my-secret
    nginx.ingress.kubernetes.io/auth-secret-type: basic
spec:
  rules:
    - http:
        paths:
          - path: /secure
            pathType: Prefix
            backend:
              service:
                name: secure-service
                port:
                  number: 80
